<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="45dp"
            android:text="@string/currency_calculator"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="65sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="65sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="."
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fromEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:background="@android:color/transparent"
                android:inputType="number|numberDecimal"
                android:padding="7dp"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fromTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:text="@string/eur"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_60"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/toEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:clickable="false"
                android:background="@android:color/transparent"
                android:inputType="number|numberDecimal"
                android:padding="7dp"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:text="@string/usd"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_60"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:padding="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Spinner
                android:id="@+id/fromSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:entries="@array/eur"
                android:clickable="false"
                android:spinnerMode="dropdown"
                android:prompt="@string/eur"
                android:background="@drawable/rectangle_border"
                android:foreground="@android:drawable/arrow_down_float"
                android:foregroundGravity="center|right"
                android:padding="15dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:scaleType="fitCenter"
                android:tint="@color/grey_60"
                app:srcCompat="@drawable/ic_swap_horiz_black_24dp" />

            <Spinner
                android:id="@+id/toSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:entries="@array/countries"
                android:background="@drawable/rectangle_border"
                android:foreground="@android:drawable/arrow_down_float"
                android:foregroundGravity="center|right"
                android:padding="15dp" />

        </LinearLayout>

        <Button
            android:id="@+id/convertBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="@string/convert"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <ProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/convertBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/convertBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
